# twitch-recorder

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/twitch_recorder/: __init__.py  cli.py  config.py  postprocess.py  recorder.py  stream.py
